Bug 156482 - After enabling "Ignore double spaces" autocorrect option, it can't be disabled again
Summary: After enabling "Ignore double spaces" autocorrect option, it can't be disable...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bisected, regression
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2023-07-26 19:54 UTC by Mike Kaganski
Modified: 2023-08-02 09:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-07-26 19:54:43 UTC
Since commit a772976f047882918d5386a3ef9226c4aa2aa118, when you enable "Ignore double spaces" under Tools->AutoCorrect->AutoCorrect Options once, you can't disable it again permanently. It gets disabled for the current session, but gets re-enabled after the program restart.
Comment 1 toi 2023-07-27 06:26:37 UTC
Thank you for reporting the bug. I can confirm that the bug is present in

Version: 7.6.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: 9366f83c88fc93d40ea0c0035508f24ad5dcb144
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Mike Kaganski 2023-07-27 13:02:32 UTC
https://gerrit.libreoffice.org/c/core/+/154958
Comment 3 Commit Notification 2023-07-27 13:49:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89ccdd1b7be48461a33200c43b2fd340e646df8b

tdf#156482: fix order in SvxBaseAutoCorrCfg::ImplCommit

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-02 09:18:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2c4cd392cedf255ac9f1845c5345af8ef9540f19

tdf#156482: fix order in SvxBaseAutoCorrCfg::ImplCommit

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.