tdf#156482: fix order in SvxBaseAutoCorrCfg::ImplCommit

Change-Id: I0c7315357a7a9ec446b06cf33420c20a58a8ec42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154958
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 89ccdd1b7be48461a33200c43b2fd340e646df8b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155138
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>